--- a/dashboard.html
+++ b/dashboard.html
@@ -1,289 +1,212 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>Airtel Promo Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Airtel-Themed Dashboard</title>
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
       font-family: Arial, sans-serif;
-      background: white;
-      overflow-x: hidden;
-    }
+    }body {
+  overflow: hidden;
+  background: url('your-logo.png') center/cover no-repeat;
+  background-blend-mode: overlay;
+}
 
-    .background-logo {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 250px;
-      opacity: 0.07;
-      filter: blur(8px);
-      animation: blink 4s infinite ease-in-out;
-      z-index: 0;
-      pointer-events: none;
-    }
+.header {
+  background-color: #e60000;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
+  position: relative;
+}
 
-    @keyframes blink {
-      0%, 100% { opacity: 0.07; }
-      50% { opacity: 0.15; }
-    }
+.glass-card {
+  margin: 10px;
+  padding: 20px;
+  border-radius: 15px;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  color: white;
+  text-align: center;
+  position: relative;
+}
 
-    .content {
-      position: relative;
-      z-index: 1;
-    }
+.eye-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
+}
 
-    .header {
-      background-color: #d90000;
-      color: white;
-      padding: 15px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+.banner {
+  width: 90%;
+  display: none;
+  margin: 10px auto;
+  border-radius: 10px;
+}
 
-    .main-card {
-      background: rgba(255, 255, 255, 0.9);
-      margin: -20px 10px 10px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px #ccc;
-      padding: 20px;
-      backdrop-filter: blur(10px);
-    }
+.services {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  padding: 10px;
+}
 
-    .user-info {
-      font-weight: bold;
-      font-size: 16px;
-    }
+.service-btn {
+  background: white;
+  border: 1px solid #e60000;
+  color: #e60000;
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+}
 
-    .balance {
-      font-size: 20px;
-      margin-top: 10px;
-    }
+.ad-section {
+  position: relative;
+  height: 150px;
+  margin: 10px;
+}
 
-    .balance .eye {
-      color: red;
-      cursor: pointer;
-      margin-left: 5px;
-    }
+#adVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+}
 
-    .buttons-row {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 15px;
-    }
+#countdown {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: rgba(0,0,0,0.5);
+  color: white;
+  padding: 3px 8px;
+  border-radius: 10px;
+  font-size: 12px;
+}
 
-    .btn {
-      background-color: #ffe5e5;
-      border: 1px solid #ffcccc;
-      color: #d90000;
-      border-radius: 10px;
-      padding: 10px;
-      flex: 1;
-      margin: 0 5px;
-      text-align: center;
-      font-size: 14px;
-      cursor: pointer;
-    }
+#muteBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: rgba(255,255,255,0.6);
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
-    .banner {
-      margin: 10px auto;
-      border-radius: 10px;
-      width: 95%;
-      display: none;
-    }
+.animated-logo {
+  width: 100px;
+  display: none;
+  animation: scatterJoin 2s forwards;
+  margin: auto;
+}
 
-    .section {
-      background: white;
-      border-radius: 10px;
-      margin: 10px;
-      padding: 10px;
-    }
+@keyframes scatterJoin {
+  0% {
+    opacity: 0;
+    transform: scale(0) rotate(360deg);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1) rotate(0deg);
+  }
+}
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 10px;
-      text-align: center;
-      font-size: 12px;
-    }
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  background-color: #fff;
+  border-top: 1px solid #ccc;
+  padding: 10px 0;
+}
 
-    .grid div {
-      padding: 10px;
-      cursor: pointer;
-      background: #f8f8f8;
-      border-radius: 10px;
-    }
+.footer-btn {
+  color: #e60000;
+  font-size: 14px;
+}
 
-    .ad-section {
-      margin: 20px 10px;
-      border-radius: 10px;
-      overflow: hidden;
-      position: relative;
-    }
-
-    video#adVideo {
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-      outline: none;
-      pointer-events: none;
-    }
-
-    .ad-section .mute-btn {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      background: rgba(255, 255, 255, 0.7);
-      border-radius: 20px;
-      padding: 4px 10px;
-      font-size: 12px;
-      cursor: pointer;
-      z-index: 2;
-    }
-
-    .animated-logo {
-      width: 80px;
-      display: block;
-      margin: 15px auto 5px;
-      animation: spinZoom 6s ease-in-out infinite, breakJoin 6s ease-in-out infinite;
-    }
-
-    @keyframes spinZoom {
-      0% { transform: rotate(0deg) scale(0.5); opacity: 0; }
-      25% { transform: rotate(180deg) scale(1.2); opacity: 1; }
-      50% { transform: rotate(360deg) scale(1); }
-      100% { transform: rotate(720deg) scale(1); }
-    }
-
-    @keyframes breakJoin {
-      0% { clip-path: circle(0% at 50% 50%); }
-      50% { clip-path: circle(70% at 50% 50%); }
-      100% { clip-path: circle(0% at 50% 50%); }
-    }
-
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: white;
-      border-top: 1px solid #ddd;
-      display: flex;
-      justify-content: space-around;
-      padding: 10px 0;
-      font-size: 12px;
-      z-index: 10;
-    }
   </style>
 </head>
 <body>
-
-  <!-- Blurred Background Logo -->
-  <img src="your-logo.png" alt="Airtel Logo" class="background-logo" />
-
-  <div class="content">
-    <!-- Header -->
-    <div class="header">
-      <div><b>Airtel Promo</b></div>
-      <div><img src="bell.png" alt="Bell" width="20" /></div>
-    </div>
-
-    <!-- Main Card -->
-    <div class="main-card">
-      <div class="user-info" id="userName">Loading...</div>
-      <div id="userNumber">00000000000</div>
-      <div class="balance">
-        Account Balance: <span id="userBalance">₦0.00</span>
-        <span class="eye" onclick="toggleBalance()">👁️</span>
-      </div>
-      <div class="buttons-row">
-        <div class="btn" onclick="location.href='add-money.html'">+ Add Money</div>
-        <div class="btn" onclick="location.href='withdraw.html'">Withdraw</div>
-      </div>
-    </div>
-
-    <!-- Ad Section -->
-    <div class="ad-section">
-      <video id="adVideo" autoplay muted loop playsinline>
-        <source src="your-ad.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
-      <div class="mute-btn" onclick="toggleMute()">🔇</div>
-      <img src="your-logo.png" class="animated-logo" alt="Logo Animation" />
-    </div>
-
-    <!-- Promo & Update Banners -->
-    <img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner" />
-    <img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner" />
-
-    <!-- Services Grid -->
-    <div class="section">
-      <b>Transfer & Cashout</b>
-      <div class="grid">
-        <div onclick="location.href='transfer.html'">Transfer Money</div>
-        <div onclick="location.href='add-money.html'">Add Money</div>
-        <div onclick="location.href='withdraw.html'">Withdraw Cash</div>
-        <div onclick="location.href='services.html'">More Services</div>
-      </div>
-    </div>
-
-    <div class="section">
-      <b>Recharge & Bill Payments</b>
-      <div class="grid">
-        <div onclick="location.href='airtime.html'">Airtime</div>
-        <div onclick="location.href='bundle.html'">Buy Bundle</div>
-        <div onclick="location.href='bills.html'">Pay Bills</div>
-        <div onclick="location.href='electricity.html'">Electricity</div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Bottom Navigation -->
-  <div class="bottom-nav">
-    <div onclick="location.href='dashboard.html'">🏠 Home</div>
-    <div onclick="location.href='scan.html'">📷 Scan</div>
-    <div onclick="location.href='history.html'">📄 History</div>
-    <div onclick="location.href='more.html'">☰ More</div>
-  </div>
-
-  <script>
-    const user = JSON.parse(localStorage.getItem('user')) || {};
-    const balanceElement = document.getElementById('userBalance');
-    let isHidden = false;
-
-    document.getElementById('userName').innerText = (user.name || 'USER').toUpperCase();
-    document.getElementById('userNumber').innerText = user.phone || '08000000000';
-    const balanceValue = user.balance ? `₦${user.balance}` : '₦300.00';
-    balanceElement.innerText = balanceValue;
+  <div class="header">
+    Airtel Promo
+  </div>  <div class="glass-card">
+    <div id="userName">Emmanuel Okwunna</div>
+    <div id="userPhone">+2348123456789</div>
+    <div id="userBalance">₦<span id="balance">23,000</span></div>
+    <div class="eye-toggle" onclick="toggleBalance()">👁️</div>
+  </div>  <img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner">
+  <img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner">  <div class="services">
+    <div class="service-btn" onclick="location.href='addmoney.html'">Add Money</div>
+    <div class="service-btn" onclick="location.href='withdraw.html'">Withdraw</div>
+    <div class="service-btn">Transfer</div>
+    <div class="service-btn">Airtime</div>
+    <div class="service-btn">Bundle</div>
+    <div class="service-btn">Bills</div>
+  </div>  <div class="ad-section">
+    <video id="adVideo" autoplay muted playsinline>
+      <source src="your-ad.mp4" type="video/mp4">
+    </video>
+    <div id="countdown">20s</div>
+    <button id="muteBtn" onclick="toggleMute()">🔇</button>
+    <img src="your-logo.png" class="animated-logo" id="animatedLogo" alt="Airtel Logo" />
+  </div>  <div class="footer">
+    <div class="footer-btn">🏠 Home</div>
+    <div class="footer-btn">📱 Wallet</div>
+    <div class="footer-btn">👤 Profile</div>
+  </div>  <script>
+    let showPromo = false;
+    setInterval(() => {
+      showPromo = !showPromo;
+      document.getElementById('updateBanner').style.display = showPromo ? 'none' : 'block';
+      document.getElementById('promoBanner').style.display = showPromo ? 'block' : 'none';
+    }, 10000);
 
     function toggleBalance() {
-      isHidden = !isHidden;
-      balanceElement.innerText = isHidden ? '••••••••' : balanceValue;
+      const bal = document.getElementById("balance");
+      if (bal.innerText === "****") {
+        bal.innerText = "23,000";
+      } else {
+        bal.innerText = "****";
+      }
     }
+
+    let countdown = 20;
+    const countdownEl = document.getElementById("countdown");
+    const adVideo = document.getElementById("adVideo");
+    const logo = document.getElementById("animatedLogo");
+
+    setInterval(() => {
+      countdown--;
+      countdownEl.textContent = countdown + "s";
+
+      if (countdown === 0) {
+        adVideo.style.display = "none";
+        logo.style.display = "block";
+      }
+
+      if (countdown === -20) {
+        logo.style.display = "none";
+        adVideo.style.display = "block";
+        countdown = 20;
+      }
+    }, 1000);
 
     function toggleMute() {
-      const video = document.getElementById('adVideo');
-      video.muted = !video.muted;
-      document.querySelector('.mute-btn').innerText = video.muted ? '🔇' : '🔊';
+      adVideo.muted = !adVideo.muted;
+      document.getElementById("muteBtn").textContent = adVideo.muted ? "🔇" : "🔊";
     }
-
-    const updateBanner = document.getElementById('updateBanner');
-    const promoBanner = document.getElementById('promoBanner');
-
-    function cycleBanners() {
-      updateBanner.style.display = 'block';
-      promoBanner.style.display = 'none';
-      setTimeout(() => {
-        updateBanner.style.display = 'none';
-        promoBanner.style.display = 'block';
-        setTimeout(cycleBanners, 10000);
-      }, 5000);
-    }
-
-    cycleBanners();
-  </script>
-</body>
-  </html>
+  </script></body>
+</html>
